# vidlib

./: .eslintignore  .eslintrc.yml  .gitignore  LICENSE  README.md  i18next-parser.config.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yaml
src/: App.tsx  i18n.ts  main.tsx
src-tauri/: Cargo.toml  build.rs  installer.nsi  tauri.conf.json  tauri.windows.conf.json
src-tauri/src/: database.rs  filescan.rs  folderscan.rs  gui.rs  main.rs  mediainfo.rs  service.rs  state.rs  thumbnail.rs  util.rs  video.rs
src/components/: EditableButtons.tsx  FolderInput.tsx  SearchBar.tsx  UpdatableText.tsx
src/entities/: FileInfo.ts  FolderInfo.ts  VideoEntry.ts  VideoFile.ts  VideoMediaInfo.ts  VideoMetadata.ts
src/i18n/translations/: en.json
src/pages/addfolder/: AddFolderWizard.tsx
src/pages/main/: MainView.tsx
src/pages/main/components/: FileTreeView.tsx  FolderInfoView.module.pcss  FolderInfoView.styles.ts  FolderInfoView.tsx  SideBar.module.pcss  SideBar.styles.ts  SideBar.tsx  VideoFileView.module.pcss  VideoFileView.styles.ts  VideoFileView.tsx
src/pages/main/entities/: VideoContext.ts
src/pages/video/: VideoView.tsx
src/pages/video/components/: VideoHeader.tsx  VideoLaunch.tsx  VideoMetadataView.styles.ts  VideoMetadataView.tsx  VideoName.tsx  VideoNotes.styles.ts  VideoNotes.tsx  VideoRating.tsx  VideoThumbnail.module.pcss  VideoThumbnail.tsx  VideoWatch.tsx
src/service/: AddFolder.ts  DeletePath.ts  FolderInfo.ts  FolderScan.ts  GetFolders.ts  GetMediaInfo.ts  GetMetadata.ts  GetThumbnail.ts  GetVideo.ts  OpenPath.ts  OpenVideo.ts  ScanFile.ts  SelectFolder.ts  ServiceResponse.ts  SetName.ts  SetNotes.ts  SetRating.ts  SetWatched.ts
test/: test.mkv
