[package]
name = "vidlib"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
native-dialog = "0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
infer = "0.15.0"
image = "0.24.6"
derive_more = "0.99.17"
gstreamer = "0.20.7"
gstreamer-app = "0.20.7"
gstreamer-video = "0.20.7"
gstreamer-pbutils = "0.20.7"
url = "2.4.0"
anyhow = "1.0.71"

[dependencies.xxhash-rust]
version = "0.8.5"
features = ["xxh3"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
