[package]
name = "vidlib"
version = "0.1.0"
description = "Explorer based video library management sfotware"
authors = ["Orkun Kocyigit"]
license = "MIT"
repository = "https://github.com/OrkunKocyigit/vidlib/"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open", "protocol-asset"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
native-dialog = "0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
anyhow = "1.0.71"
opener = "0.6.1"
derive_builder = "0.12.0"
log = "0.4.19"
rsmpeg = { version = "0.14", features = ["ffmpeg5"]}
tokio = { version = "1.29", default-features = false, features = ["sync"] }

[dependencies.xxhash-rust]
version = "0.8.6"
features = ["xxh3"]

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "d99b693"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md", dependencies = ["ffmpeg[libpng,dav1d]"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
